--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../rockPaperScissors-/index.js"></script>
+    <link rel="stylesheet" href="../rockPaperScissors-/styles.css" />
     <title>Document</title>
   </head>
   <body></body>
