--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../rockPaperScissors-/index.js"></script>
-    <link rel="stylesheet" href="../rockPaperScissors-/styles.css" />
+    <script src="index.js"></script>
+
     <title>Document</title>
   </head>
   <body></body>
